--- a/product.html
+++ b/product.html
@@ -52,12 +52,12 @@
               <a
                 class="na nav-link active text-white"
                 aria-current="page"
-                href="#"
+                href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="na nav-link text-white" href="#">Products</a>
+              <a class="na nav-link text-white" href="product.html">Products</a>
             </li>
             <li class="nav-item">
               <a class="na nav-link text-white" href="#">Help & FAQs</a>
@@ -159,7 +159,7 @@
     <!-- Footer -->
     <div class="foo container-fluid bg-dark">
       <div class="row">
-        <div class="col-md-3">
+        <div class="cdd col-md-3">
           <h5>Dreamweaver - PCcentre</h5>
           <p class="d dd">
             Your trusted IT solutions partner with over 2 years of experience
@@ -170,7 +170,7 @@
           <i class="dd ga bi bi-instagram"></i>
           <i class="dd ga bi bi-linkedin"></i>
         </div>
-        <div class="col-md-3">
+        <div class="cddd col-md-3">
           <h5>Quick Links</h5>
           <p class="dd dow">Home</p>
           <p class="dd">Products</p>
@@ -178,7 +178,7 @@
           <p class="dd">About Us</p>
           <p class="dd">Contact</p>
         </div>
-        <div class="col-md-3">
+        <div class="cdddd col-md-3">
           <h5>Categories</h5>
           <p class="dd dow">Notebooks</p>
           <p class="dd">Displays</p>
