--- a/aceraspire5.html
+++ b/aceraspire5.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dreamweaver - PCcentre</title>
-    <link rel="icon" href="images/logo (2).png" />
+      <link rel="icon" href="images/logo (2).png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -14,9 +14,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-  </head>
-  <body>
-    <!-- header -->
+</head>
+<body>
+    <!--------------------- header ------------------------>
     <div class="hea container-fluid">
       <div>
         <i class="bi bi-telephone"> </i>
@@ -26,7 +26,7 @@
         <p>Mon-Sat: 9:00 AM - 8:00 PM</p>
       </div>
     </div>
-    <!-- Navbar -->
+<!------------------------ Navbar --------------------------->
     <nav class="nab navbar navbar-expand-lg shadow">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#"
@@ -97,8 +97,74 @@
         </div>
       </div>
     </nav>
+<!-- --------------------add to cart picture------------------- -->
+<div class="container1">
 
-    <!-- Footer -->
+  <!-- Left Side Image (NO SHADOW NOW) -->
+  <div class="product-img">
+    <img src="images/acer laptop.jpg" alt="pic">
+  </div>
+
+  <!-- Right Side Details -->
+  <div class="addtocart">
+    <h3>Acer</h3>
+    <p class="product-title">Acer Aspire 5 Business Laptop</p>
+
+    <!-- ⭐⭐⭐⭐☆ -->
+    <p>⭐⭐⭐⭐☆ 4.4 (521 reviews)</p> 
+
+    <p class="price">$649.99</p>
+    <p class="stock">✅ In Stock</p>
+
+    <h5>Key Features</h5>
+    <ul class="features">
+      <li>15.6" Full HD IPS Display</li>
+      <li>Intel Core i5-1235U</li>
+      <li>8GB DDR4 RAM</li>
+      <li>512GB NVMe SSD</li>
+      <li>Backlit Keyboard</li>
+    </ul>
+
+    <!-- Quantity + Add To Cart Same Line -->
+    <div class="cart-row">
+      <input type="number" value="1" min="1">
+      <button class="cart-btn">Add To Cart</button>
+    </div><br>
+
+    <div class="secondary-actions">
+  <button class="add-to-wishlist-btn">
+    🤍 Add to Wishlist
+  </button>
+  <button class="share-btn">
+    🔗 Share
+  </button>
+</div>
+
+<!-- ✅ Choti Break Line -->
+<hr class="mini-line">
+
+<div class="service-features">
+  <div class="feature-item">
+    <div class="feature-icon">🚚</div>
+    <p>Fast Delivery</p>
+  </div>
+
+  <div class="feature-item">
+    <div class="feature-icon">🛡️</div>
+    <p>Warranty</p>
+  </div>
+
+  <div class="feature-item">
+    <div class="feature-icon">🎧</div>
+    <p>Support</p>
+  </div>
+</div>
+
+
+  </div>
+</div>
+
+    <!----------------- Footer ------------------->
     <div class="foo container-fluid bg-dark">
       <div class="row">
         <div class="col-md-3">
@@ -159,5 +225,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+
+</body>
 </html>
