--- a/Apcbackups.html
+++ b/Apcbackups.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dreamweaver - PCcentre</title>
-      <link rel="icon" href="images/logo (2).png" />
+ <link rel="icon" href="images/logo (2).png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
     />
 </head>
 <body>
-    <!--------------------- header ------------------------>
+     <!-- header -->
     <div class="hea container-fluid">
       <div>
         <i class="bi bi-telephone"> </i>
@@ -26,7 +26,7 @@
         <p>Mon-Sat: 9:00 AM - 8:00 PM</p>
       </div>
     </div>
-<!------------------------ Navbar --------------------------->
+    <!-- Navbar -->
     <nav class="nab navbar navbar-expand-lg shadow">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#"
@@ -102,25 +102,24 @@
 
   <!-- Left Side Image (NO SHADOW NOW) -->
   <div class="product-img">
-    <img src="images/acer laptop.jpg" alt="pic">
+    <img src="images/Apc Back-UPS.jpg" alt="pic">
   </div>
 
   <!-- Right Side Details -->
   <div class="addtocart">
-    <h3>Acer</h3>
-    <p class="product-title">Acer Aspire 5 Business Laptop</p>
-    <p>⭐⭐⭐⭐☆ 4.4 (521 reviews)</p> 
-
-    <p class="price">$649.99</p>
+    <h3>APC</h3>
+    <p class="product-title">APC Back-UPS Pro 1500VA</p>
+    <p>⭐⭐⭐⭐☆ 4.4 (1876 reviews)</p> 
+    <p class="price">$249.99</p>
     <p class="stock">✅ In Stock</p>
 
     <h5>Key Features</h5>
     <ul class="features">
-      <li>15.6" Full HD IPS Display</li>
-      <li>Intel Core i5-1235U</li>
-      <li>8GB DDR4 RAM</li>
-      <li>512GB NVMe SSD</li>
-      <li>Backlit Keyboard</li>
+      <li>1500VA/865W capacity</li>
+      <li>Batery backup and surge protection</li>
+      <li>10 outlets (5 battery backup)</li>
+      <li>LCD display</li>
+      <li>Automatic voltage regulation</li>
     </ul>
 
     <!-- Quantity + Add To Cart Same Line -->
@@ -146,19 +145,22 @@
     <div class="feature-icon">🚚</div>
     <p>Fast Delivery</p>
   </div>
+
   <div class="feature-item">
     <div class="feature-icon">🛡️</div>
     <p>Warranty</p>
   </div>
+
   <div class="feature-item">
     <div class="feature-icon">🎧</div>
     <p>Support</p>
   </div>
 </div>
+
+
   </div>
 </div>
-
-    <!----------------- Footer ------------------->
+    <!-- Footer -->
     <div class="foo container-fluid bg-dark">
       <div class="row">
         <div class="col-md-3">
@@ -219,6 +221,5 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
