--- a/product.html
+++ b/product.html
@@ -183,6 +183,7 @@
     <p class="card-text">APC Back-UPS Pro 1500VA</p>
     <span>⭐⭐⭐⭐ (1876)</span>
     <p>$249.99</p>
+    <a href="Apcbackups.html" class="stretched-link"></a>
     </div>
    </div>
   </div>
@@ -195,6 +196,7 @@
     <span>⭐⭐⭐⭐ (156)</span><br>
     <del>$529.99</del>
     <span>$449.99</span>
+    <a href="Asusrogstrix.html" class="stretched-link"></a>
     </div>
    </div>
   </div>
@@ -206,6 +208,7 @@
     <p class="card-text">ASUS ROG Swift 34" Curved Gaming...</p>
     <span>⭐⭐⭐⭐ (187)</span>
     <p>$899.99</p>
+    <a href="Asusswift.html" class="stretched-link"></a>
     </div>
    </div>
   </div>
@@ -218,6 +221,7 @@
     <span>⭐⭐⭐⭐ (341)</span><br>
     <del>1899.99</del>
     <span>$1649.99</span>
+    <a href="AsusZephyrus.html" class="stretched-link"></a>
     </div>
    </div>
   </div>
