--- a/Asusswift.html
+++ b/Asusswift.html
@@ -16,7 +16,7 @@
     />
 </head>
 <body>
-    <!--------------------- header ------------------------>
+     <!-- header -->
     <div class="hea container-fluid">
       <div>
         <i class="bi bi-telephone"> </i>
@@ -26,7 +26,7 @@
         <p>Mon-Sat: 9:00 AM - 8:00 PM</p>
       </div>
     </div>
-<!------------------------ Navbar --------------------------->
+    <!-- Navbar -->
     <nav class="nab navbar navbar-expand-lg shadow">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#"
@@ -102,25 +102,24 @@
 
   <!-- Left Side Image (NO SHADOW NOW) -->
   <div class="product-img">
-    <img src="images/acer laptop.jpg" alt="pic">
+    <img src="images/Asus Rog Swift.jpg" alt="pic">
   </div>
 
   <!-- Right Side Details -->
   <div class="addtocart">
-    <h3>Acer</h3>
-    <p class="product-title">Acer Aspire 5 Business Laptop</p>
-    <p>⭐⭐⭐⭐☆ 4.4 (521 reviews)</p> 
-
-    <p class="price">$649.99</p>
+    <h3>ASUS</h3>
+    <p class="product-title"></p>
+    <p>⭐⭐⭐⭐☆ 4.8 (187 reviews)</p> 
+    <p class="price">$899.99</p>
     <p class="stock">✅ In Stock</p>
 
     <h5>Key Features</h5>
     <ul class="features">
-      <li>15.6" Full HD IPS Display</li>
-      <li>Intel Core i5-1235U</li>
-      <li>8GB DDR4 RAM</li>
-      <li>512GB NVMe SSD</li>
-      <li>Backlit Keyboard</li>
+      <li>34-inch ultrawide curved display</li>
+      <li>3440 x 1440 WQHD resolution</li>
+      <li>165Hz refresh rate with G-SYNC</li>
+      <li>1 ms response time</li>
+      <li>RGB lightinig on back</li>
     </ul>
 
     <!-- Quantity + Add To Cart Same Line -->
@@ -146,19 +145,22 @@
     <div class="feature-icon">🚚</div>
     <p>Fast Delivery</p>
   </div>
+
   <div class="feature-item">
     <div class="feature-icon">🛡️</div>
     <p>Warranty</p>
   </div>
+
   <div class="feature-item">
     <div class="feature-icon">🎧</div>
     <p>Support</p>
   </div>
 </div>
+
+
   </div>
 </div>
-
-    <!----------------- Footer ------------------->
+    <!-- Footer -->
     <div class="foo container-fluid bg-dark">
       <div class="row">
         <div class="col-md-3">
@@ -219,6 +221,5 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
