Describe changes inside submodule

--- a/aceraspire5.html
+++ b/aceraspire5.html
@@ -138,7 +138,7 @@
   </button>
 </div>
 
-<!-- ✅ Choti Break Line -->
+
 <hr class="mini-line">
 
 <div class="service-features">
@@ -155,6 +155,64 @@
     <p>Support</p>
   </div>
 </div>
+  </div>
+</div>
+<!-- --------------technical Specification--------- -->
+<div class="spec-box">
+    <h3>Technical Specifications</h3>
+    <table>
+        <tr>
+            <th>Display</th>
+            <td class="FHD">15.6" FHD</td>
+            <th>Processor</th>
+            <td>Intel Core i5-1235U</td>
+        </tr>
+
+        <tr>
+            <th>RAM</th>
+            <td>8GB DDR4</td>
+            <th>Storage</th>
+            <td>512GB SSD</td>
+        </tr>
+
+        <tr>
+            <th>Graphics</th>
+            <td>Intel Iris Xe</td>
+             <th>Battery</th>
+            <td>Up to 8 hours</td>
+        </tr>
+    </table>
+</div>
+  <!-- -------------related products------------------ -->
+<div class="related-products">
+  <h4 class="related-heading">Related Products</h4>
+
+  <div class="row">
+    <!-- Product 1 -->
+    <div class="col-md-4 acercard">
+      <div class="card2" style="width: 18rem;">
+        <img src="images/Dell XPS 15.jpg" class="card-img-top" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Dell</h5>
+          <p class="card-text">Dell XPS 15 Laptop</p>
+          <p>$1899.99</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 2 -->
+    <div class="col-md-4 acercard">
+      <div class="card2">
+        <img src="images/Zephyrus G14 gaming laptop.jpg" class="card-img-top" alt="">
+        <div class="card-body">
+          <h5 class="card-title">ASUS</h5>
+          <p class="card-text">ASUS ROG Zephyrus G14 Curved Gaming Laptop</p>
+          <del>$1899.99</del>
+          <span>$1649.99</span>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
 
