--- a/product.html
+++ b/product.html
@@ -73,7 +73,7 @@
                 Company Catalogs
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Dell</a></li>
+                <li><a class="dropdown-item" href="Dell.html">Dell</a></li>
                 <li><a class="dropdown-item" href="#">Acer</a></li>
                 <li><a class="dropdown-item" href="#">Toshiba</a></li>
                 <li><a class="dropdown-item" href="#">HP</a></li>
