--- a/Dell.html
+++ b/Dell.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dreamweaver - PCcentre</title>
-      <link rel="icon" href="images/logo (2).png" />
+    <link rel="icon" href="images/logo (2).png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
     />
 </head>
 <body>
-     <!-- header -->
+    <!--------------------- header ------------------------>
     <div class="hea container-fluid">
       <div>
         <i class="bi bi-telephone"> </i>
@@ -26,7 +26,7 @@
         <p>Mon-Sat: 9:00 AM - 8:00 PM</p>
       </div>
     </div>
-    <!-- Navbar -->
+<!------------------------ Navbar --------------------------->
     <nav class="nab navbar navbar-expand-lg shadow">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#"
@@ -73,7 +73,7 @@
                 Company Catalogs
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Dell</a></li>
+                <li><a class="dropdown-item" href="Dell.html">Dell</a></li>
                 <li><a class="dropdown-item" href="#">Acer</a></li>
                 <li><a class="dropdown-item" href="#">Toshiba</a></li>
                 <li><a class="dropdown-item" href="#">HP</a></li>
@@ -97,74 +97,59 @@
         </div>
       </div>
     </nav>
-<!-- --------------------add to cart picture------------------- -->
-<div class="container1">
-
-  <!-- Left Side Image (NO SHADOW NOW) -->
-  <div class="product-img">
-    <img src="images/Corsair K95 keyboard.avif" alt="pic">
+    <!-- ------------------info section------------ -->
+     <div class="head">
+        <h6>Dell Product Catalog</h6>
+        <p>Browse our complete selection of Dell products. All items come with manufacturer Warranty and our dedicated support.</p>
+        </div>
+        
+       <div class="info-section">
+        <div class="info-box">
+            <h6>2</h6>
+            <p>Products Available</p>
+        </div>
+        <div class="info-box">
+            <h6>2</h6>
+            <p>Product Categories</p>
+        </div>
+        <div class="info-box">
+            <h6 class="authorized">Authorized</h6>
+            <p>Official Dealer</p>
+        </div>
+       </div>
+     <!-- -----------------card------------------------- -->
+     <div class="row">
+        <h5>Display</h5>
+         <div class="col-md-4 acercard">
+    <div class="card2" style="width: 18rem;">
+    <img src="images/Dell ultra sharp.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+    <h5 class="card-title">Dell</h5>
+    <p class="card-text">Dell UltraSharp 27" 4K Monitor </p>
+    <span>⭐⭐⭐⭐ (234)</span><br>
+    <del>699.99</del>
+    <span>$549.99</span>
+    </div>
+   </div>
   </div>
 
-  <!-- Right Side Details -->
-  <div class="addtocart">
-    <h3>Corsair</h3>
-    <p class="product-title">Corsair K95 RGB Platinum Mechanical Keyboard</p>
-    <p>⭐⭐⭐⭐☆ 4.6 (876 reviews)</p>
-    <del>$199.99</del> 
-    <p class="price">$179.99</p>
-    <p class="stock">✅ In Stock</p>
-
-    <h5>Key Features</h5>
-    <ul class="features">
-      <li>Cherry MX Speed switches</li>
-      <li>Per-key RGB backlightning</li>
-      <li>Dedicated macro keys</li>
-      <li>USB passthrough</li>
-      <li>Detachable soft-touch wrist rest</li>
-    </ul>
-
-    <!-- Quantity + Add To Cart Same Line -->
-    <div class="cart-row">
-      <input type="number" value="1" min="1">
-      <button class="cart-btn">Add To Cart</button>
-    </div><br>
-
-    <div class="secondary-actions">
-  <button class="add-to-wishlist-btn">
-    🤍 Add to Wishlist
-  </button>
-  <button class="share-btn">
-    🔗 Share
-  </button>
-</div>
-
-<!-- ✅ Choti Break Line -->
-<hr class="mini-line">
-
-<div class="service-features">
-  <div class="feature-item">
-    <div class="feature-icon">🚚</div>
-    <p>Fast Delivery</p>
+  <h5>Notebook</h5>
+   <div class="col-md-4 acercard">
+    <div class="card2" style="width: 18rem;">
+    <img src="images/Dell XPS 15.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+    <h5 class="card-title">Dell</h5>
+    <p class="card-text">Dell XPS 15 Laptop</p>
+    <span>⭐⭐⭐⭐ (289)</span>
+    <p>$1899.99</p>
+    </div>
+   </div>
   </div>
-
-  <div class="feature-item">
-    <div class="feature-icon">🛡️</div>
-    <p>Warranty</p>
-  </div>
-
-  <div class="feature-item">
-    <div class="feature-icon">🎧</div>
-    <p>Support</p>
-  </div>
-</div>
-
-
-  </div>
-</div>
-    <!-- Footer -->
+     </div>
+    <!----------------- Footer ------------------->
     <div class="foo container-fluid bg-dark">
       <div class="row">
-        <div class="col-md-3">
+        <div class="cdd col-md-3">
           <h5>Dreamweaver - PCcentre</h5>
           <p class="d dd">
             Your trusted IT solutions partner with over 2 years of experience
@@ -175,7 +160,7 @@
           <i class="dd ga bi bi-instagram"></i>
           <i class="dd ga bi bi-linkedin"></i>
         </div>
-        <div class="col-md-3">
+        <div class="cddd col-md-3">
           <h5>Quick Links</h5>
           <p class="dd dow">Home</p>
           <p class="dd">Products</p>
@@ -183,7 +168,7 @@
           <p class="dd">About Us</p>
           <p class="dd">Contact</p>
         </div>
-        <div class="col-md-3">
+        <div class="cdddd col-md-3">
           <h5>Categories</h5>
           <p class="dd dow">Notebooks</p>
           <p class="dd">Displays</p>
