--- a/aceraspire5.html
+++ b/aceraspire5.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dreamweaver - PCcentre</title>
-      <link rel="icon" href="images/logo (2).png" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PC Centre</title>
+    <link rel="icon" href="images/logo (2).png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -14,19 +14,27 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-</head>
-<body>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <!--------------------- header ------------------------>
-    <div class="hea container-fluid">
+    <div
+      class="container-fluid bg-dark text-white py-2 px-4 d-flex justify-content-between align-items-center"
+    >
       <div>
-        <i class="bi bi-telephone"> </i>
+        <i class="bi bi-telephone"></i>
         <span>Support: +1 (555) 123-4567</span>
       </div>
-      <div class="time">
-        <p>Mon-Sat: 9:00 AM - 8:00 PM</p>
+      <div>
+        <i class="bi bi-clock"></i>
+        <span>Mon-Sat: 9:00 AM - 8:00 PM</span>
       </div>
     </div>
-<!------------------------ Navbar --------------------------->
+    <!------------------------ Navbar --------------------------->
     <nav class="nab navbar navbar-expand-lg shadow">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#"
@@ -62,6 +70,9 @@
             <li class="nav-item">
               <a class="na nav-link text-white" href="#">Help & FAQs</a>
             </li>
+            <li class="nav-item">
+          <a class="nav-link text-white" href="Contact.html">Contact Us</a>
+        </li>
             <li class="nav-item dropdown">
               <a
                 class="na nav-link text-white"
@@ -97,134 +108,118 @@
         </div>
       </div>
     </nav>
-<!-- --------------------add to cart picture------------------- -->
-<div class="container1">
-
-  <!-- Left Side Image (NO SHADOW NOW) -->
-  <div class="product-img">
-    <img src="images/acer laptop.jpg" alt="pic">
-  </div>
-
-  <!-- Right Side Details -->
-  <div class="addtocart">
-    <h3>Acer</h3>
-    <p class="product-title">Acer Aspire 5 Business Laptop</p>
-
-    <!-- ⭐⭐⭐⭐☆ -->
-    <p>⭐⭐⭐⭐☆ 4.4 (521 reviews)</p> 
-
-    <p class="price">$649.99</p>
-    <p class="stock">✅ In Stock</p>
-
-    <h5>Key Features</h5>
-    <ul class="features">
-      <li>15.6" Full HD IPS Display</li>
-      <li>Intel Core i5-1235U</li>
-      <li>8GB DDR4 RAM</li>
-      <li>512GB NVMe SSD</li>
-      <li>Backlit Keyboard</li>
-    </ul>
-
-    <!-- Quantity + Add To Cart Same Line -->
-    <div class="cart-row">
-      <input type="number" value="1" min="1">
-      <button class="cart-btn">Add To Cart</button>
-    </div><br>
-
-    <div class="secondary-actions">
-  <button class="add-to-wishlist-btn">
-    🤍 Add to Wishlist
-  </button>
-  <button class="share-btn">
-    🔗 Share
-  </button>
-</div>
-
-<!-- ✅ Choti Break Line -->
-<hr class="mini-line">
-
-<div class="service-features">
-  <div class="feature-item">
-    <div class="feature-icon">🚚</div>
-    <p>Fast Delivery</p>
-  </div>
-
-  <div class="feature-item">
-    <div class="feature-icon">🛡️</div>
-    <p>Warranty</p>
-  </div>
-
-  <div class="feature-item">
-    <div class="feature-icon">🎧</div>
-    <p>Support</p>
-  </div>
-</div>
-
-
-  </div>
-</div>
-
-    <!----------------- Footer ------------------->
-    <div class="foo container-fluid bg-dark">
-      <div class="row">
-        <div class="col-md-3">
-          <h5>Dreamweaver - PCcentre</h5>
-          <p class="d dd">
-            Your trusted IT solutions partner with over 2 years of experience
-            and 1,000+ products from leading manufacturers.
-          </p>
-          <i class="dd bi bi-facebook"></i>
-          <i class="dd ga bi bi-twitter"></i>
-          <i class="dd ga bi bi-instagram"></i>
-          <i class="dd ga bi bi-linkedin"></i>
-        </div>
-        <div class="col-md-3">
-          <h5>Quick Links</h5>
-          <p class="dd dow">Home</p>
-          <p class="dd">Products</p>
-          <p class="dd">Help & Support</p>
-          <p class="dd">About Us</p>
-          <p class="dd">Contact</p>
-        </div>
-        <div class="col-md-3">
-          <h5>Categories</h5>
-          <p class="dd dow">Notebooks</p>
-          <p class="dd">Displays</p>
-          <p class="dd">Storage</p>
-          <p class="dd">Printers</p>
-          <p class="dd">Accessories</p>
-        </div>
-        <div class="co col-md-3">
-          <h5>Contact Us</h5>
-          <div>
-            <i class="dd bi bi-geo-alt"></i>
-            <span class="dd">123 Tech Street, Downtown</span>
-          </div>
-          <div>
-            <i class="dd bi bi-telephone"></i>
-            <span class="dd">+1 (555) 123-4567</span>
-          </div>
-          <div>
-            <i class="dd bi bi-envelope"></i>
-            <span class="dd">support@pccentre.com</span>
-          </div>
-        </div>
+    <!-- --------------------add to cart picture------------------- -->
+    <div class="container1">
+      <!-- Left Side Image -->
+      <div class="product-img">
+        <img src="images/acer laptop.jpg" alt="pic" id="productImage"/>
       </div>
-      <div class="row">
-        <div class="col-md-12 container">
-          <hr style="color: #d1d5db" />
+
+      <!-- Right Side Details -->
+      <div class="addtocart" style="margin-top: 30px;">
+        <h3 id="companyName">Acer</h3>
+        <p class="product-title" id="productTitle">Acer Aspire 5 Business Laptop</p>
+
+        
+        <p id="rating">⭐⭐⭐⭐☆ 4.4 (521 reviews)</p>
+
+        <p class="price" id="price">$649.99</p>
+        <p class="stock">✅ In Stock</p>
+
+        <h5>Key Features</h5>
+        <ul class="features" id="featuresList">
+          <li>15.6" Full HD IPS Display</li>
+          <li>Intel Core i5-1235U</li>
+          <li>8GB DDR4 RAM</li>
+          <li>512GB NVMe SSD</li>
+          <li>Backlit Keyboard</li>
+        </ul>
+
+        <!-- Quantity + Add To Cart Same Line -->
+        <div class="cart-row">
+          <input type="number" value="1" min="1" />
+          <button class="cart-btn">Add To Cart</button>
         </div>
-      </div>
-      <div class="row">
-        <div class="dd mid col-md-12">
-          <p>
-            © 2025 Dreamweaver - PCcentre. All rights reserved. | Privacy Policy
-            | Terms of Service
-          </p>
+        <br />
+
+        <div class="secondary-actions">
+          <button class="add-to-wishlist-btn">🤍 Add to Wishlist</button>
+          <button class="share-btn">🔗 Share</button>
+        </div>
+
+        <hr class="mini-line" />
+
+        <div class="service-features">
+          <div class="feature-item">
+            <div class="feature-icon">🚚</div>
+            <p>Fast Delivery</p>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">🛡️</div>
+            <p>Warranty</p>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">🎧</div>
+            <p>Support</p>
+          </div>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
+    <!----------------- Footer ------------------->
+    <footer class="container-fluid bg-dark text-white pt-4">
+      <div class="row px-4">
+        <div class="col-md-3 mb-3">
+          <h5>PC Centre</h5>
+          <p>
+            Your trusted IT solutions partner with over 2 years of experience
+            and 1,000+ products from leading manufacturers.
+          </p>
+          <i class="bi bi-facebook me-2"></i>
+          <i class="bi bi-twitter me-2"></i>
+          <i class="bi bi-instagram me-2"></i>
+          <i class="bi bi-linkedin"></i>
+        </div>
+
+        <div class="col-md-3 mb-3" style="padding-left: 90px">
+          <h5>Quick Links</h5>
+          <p>Home</p>
+          <p>Products</p>
+          <p>Help & Support</p>
+          <p>About Us</p>
+          <p>Contact</p>
+        </div>
+
+        <div class="col-md-3 mb-3" style="padding-left: 90px">
+          <h5>Categories</h5>
+          <p>Notebooks</p>
+          <p>Displays</p>
+          <p>Storage</p>
+          <p>Printers</p>
+          <p>Accessories</p>
+        </div>
+
+        <div class="col-md-3 mb-3" style="padding-left: 90px">
+          <h5>Contact Us</h5>
+          <p><i class="bi bi-geo-alt"></i> 123 Tech Street, Downtown</p>
+          <p><i class="bi bi-telephone"></i> +1 (555) 123-4567</p>
+          <p><i class="bi bi-envelope"></i> support@pccentre.com</p>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="text-center pb-3">
+        <p class="mb-0">
+          © 2025 PC Centre. All rights reserved. | Privacy Policy |
+          Terms of Service
+        </p>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    </script>
+  </body>
 </html>
